Fix: Force update deployment path to public_html

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
           # Astro 打包後的成品會放在 dist 資料夾
           local-dir: ./dist/
           # 上傳到 FTP 的根目錄 (通常 publish@tohot.xyz 已經對應到網站資料夾了)
-          server-dir: ./
+          server-dir: ./public_html/
           # 安全設定 (若遇到憑證問題可調整，目前先設為 false 確保相容性)
           strict: false
